--- a/package.json
+++ b/package.json
@@ -1,29 +1,31 @@
 {
   "name": "laya-ts-webpack",
-  "version": "1.0.0",
   "title": "配置游戏标题",
+  "version": "1.0.0",
   "description": "LayaAir Typescript Webpack 脚手架",
   "scripts": {
     "webpack-dev": "webpack --mode development",
-    "dev": "webpack-dev-server --mode development --inline --progress",
+    "dev": "webpack-dev-server --mode development --inline --progress ",
     "build": "webpack --ENV=PROD --mode production"
   },
   "author": "ChenShuyao <6044407@qq.com>",
   "license": "ISC",
   "devDependencies": {
+    "axios": "^0.19.0",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.0.4",
+    "copy-webpack-plugin": "^5.1.1",
+    "es6-promise": "^4.2.8",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "glob": "^7.1.5",
     "html-webpack-plugin": "^3.2.0",
     "node-notifier": "^6.0.0",
     "ts-loader": "^6.2.1",
+    "ts-md5": "^1.2.7",
     "typescript": "^3.6.4",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.9.0"
   },
-  "dependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/IdeaEcho/laya-ts-webpack.git"
